--- a/html/index.html
+++ b/html/index.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grafisch Lyceum / Home</title>
-    <link rel="stylesheet" href="../css/index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="shortcut icon" href="../media/Logo.jpg" type="image/x-icon" />
+  </head>
+  <body onload="typeWriter()">
+    <div class="container">
+      <div id="logodiv">
+        <img class="logo" src="../media/Logo.jpg" alt="" />
+      </div>
 
-<div class="container">
+      <video class="video" width="1080" height="1920" autoplay loop muted>
+        <source src="../media/backgroundvideo2.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
 
-    <div id="logodiv">
-        <img class="logo" src="../media/Logo.jpg" alt="">
+      <div class="tekst">
+        <div id="tekst1"></div>
+
+<script>
+var i = 0;
+var txt = 'ENTER THE CREATIVE WORLD';
+var speed = 70;
+
+function typeWriter() {
+  if (i < txt.length) {
+    document.getElementById("tekst1").innerHTML += txt.charAt(i);
+    i++;
+    setTimeout(typeWriter, speed);
+  }
+}
+</script>
+
+        <div class="tekst2">
+          <a class="meerinfo" href="index.html">SWIPE UP</a>
+        </div>
+      </div>
+
+      <div class="arrow">^</div>
     </div>
-
-</div>
-</body>
+  </body>
 </html>
