--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <title>Grafisch Lyceum / Home</title>
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="shortcut icon" href="../media/Logo.jpg" type="image/x-icon" />
+    <script src="../js/script.js" defer></script>
   </head>
   <body onload="typeWriter()">
     <div class="container">
@@ -20,26 +21,10 @@
 
       <div class="tekst">
         <div id="tekst1"></div>
-
-<script>
-var i = 0;
-var txt = 'ENTER THE CREATIVE WORLD';
-var speed = 70;
-
-function typeWriter() {
-  if (i < txt.length) {
-    document.getElementById("tekst1").innerHTML += txt.charAt(i);
-    i++;
-    setTimeout(typeWriter, speed);
-  }
-}
-</script>
-
         <div class="tekst2">
           <a class="meerinfo" href="index.html">SWIPE UP</a>
         </div>
       </div>
-
       <div class="arrow">^</div>
     </div>
   </body>
