--- a/index.html
+++ b/index.html
@@ -3,22 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grafisch Lyceum / Home</title>
-    <link rel="stylesheet" href="/css/index.css" />
-    <link rel="shortcut icon" href="/media/Logo.jpg" type="image/x-icon" />
-    <script src="/js/script.js" defer></script>
+    <title>Grafisch Lyceum - Home</title>
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="shortcut icon" href="media/Logo.jpg" type="image/x-icon" />
+    <script src="js/script.js" defer></script>
   </head>
   <body onload="typeWriter()">
     <div class="container">
       <div id="logodiv">
-        <img class="logo" src="/media/Logo.jpg" alt="" />
+        <img class="logo" src="media/Logo.jpg" alt="" />
       </div>
-
       <video class="video" width="1080" height="1920" autoplay loop muted>
-        <source src="/media/backgroundvideo2.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
-
+        <source src="media/backgroundvideo2.mp4" type="video/mp4" /></video>
       <div class="tekst">
         <div id="tekst1"></div>
         <div class="tekst2">
