Main.css gemaakt en gebruikt
Main.css gemaakt voor fonts en kleuren

--- a/opleiding.html
+++ b/opleiding.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./css/Opleiding.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grafisch Lyceum - Opleiding</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <h1 class="opleidingTitel">Mediamormgeven</h1>
+    </div>
+  </body>
 </html>
