--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grafisch Lyceum - Home</title>
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/main.css" />
+
     <link rel="shortcut icon" href="media/Logo.jpg" type="image/x-icon" />
     <script src="js/script.js" defer></script>
   </head>
