--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grafisch Lyceum - Home</title>
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/main.css" />
+<html lang="en"><head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Grafisch Lyceum - Home</title>
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/main.css">
 
-    <link rel="shortcut icon" href="media/Logo.jpg" type="image/x-icon" />
-    <script src="js/script.js" defer></script>
-  </head>
-  <body onload="typeWriter()">
-    <div class="container">
-      <div id="logodiv">
-        <img class="logo" src="media/Logo.jpg" alt="" />
-      </div>
-      <video class="video" width="1080" height="1920" autoplay loop muted>
-        <source src="media/backgroundvideo2.mp4" type="video/mp4" /></video>
-      <div class="tekst">
-        <div id="tekst1"></div>
-        <div class="tekst2">
-          <a class="meerinfo" href="index.html">SWIPE UP</a>
-        </div>
-      </div>
-      <div class="arrow">^</div>
+  <link rel="shortcut icon" href="media/Logo.jpg" type="image/x-icon">
+  <script src="js/script.js" defer=""></script>
+</head>
+<body onload="typeWriter()">
+  <div class="container">
+    <div id="logodiv">
+      <img class="logo" src="media/Logo.jpg" alt="">
     </div>
-  </body>
+    <video class="video" width="1080" height="1920" autoplay="" loop="" muted="">
+      <source src="media/backgroundvideo2.mp4" type="video/mp4"></video>
+    <div class="tekst">
+      <div id="tekst1"></div>
+      <div class="tekst2">
+        <a class="meerinfo" href="index.html">SWIPE UP</a>
+      </div>
+    </div>
+    <div class="arrow">^</div>
+  </div>
+
+  <div class="test_img_box">
+      <img class="test_img" width="1080" src="media/screenshot.png" alt="">
+
+  </div>
+</body>
 </html>
