--- a/opleiding.html
+++ b/opleiding.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./css/Opleiding.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grafisch Lyceum - Opleiding</title>
   </head>
   <body>
     <div class="header">
-      <h1 class="opleidingTitel">Mediamormgeven</h1>
+      <h1 class="opleidingTitel">
+        Media <br />
+        vormgeven
+      </h1>
     </div>
   </body>
 </html>
+4
