--- a/opleidingen/mv.html
+++ b/opleidingen/mv.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./css/Opleiding.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="../css/Opleiding.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grafisch Lyceum - Opleiding</title>
@@ -13,7 +13,12 @@
         Media <br />
         vormgeven
       </h1>
+      <a href="./index.html"
+        ><img
+          class="bannerLogo"
+          src="../media/GLRlogo_witkader.png"
+          alt="Glr logo banner"
+      /></a>
     </div>
   </body>
 </html>
-4
