CSS/HTML Index pagina

--- a/index.html
+++ b/index.html
@@ -22,12 +22,39 @@
         <a class="meerinfo" href="index.html">SWIPE UP</a>
       </div>
     </div>
-    <div class="arrow">^</div>
+    <center><div class="arrow">^</div></center>
   </div>
 
-  <div class="test_img_box">
-      <img class="test_img" width="1080" src="media/screenshot.png" alt="">
+  <div class="opleidingen-container">
+    <section class="opleiding-section">
+      <div class="opleiding left">
+        <div><h1>MEDIA</h1><H1>VORMGEVER</H1></div>
+      </div>
+      <div class="opleiding right">
+        <div class="square"></div>
+        <div class="opleiding-button"><span>MEER INFO</span></div>
+      </div>
+    </section>
 
+    <section class="opleiding-section1">
+      <div class="opleiding left">
+        <div><h1>MEDIA</h1><H1>VORMGEVER</H1></div>
+      </div>
+      <div class="opleiding right">
+        <div class="square"></div>
+        <div class="opleiding-button"><span>MEER INFO</span></div>
+      </div>
+    </section>
+
+    <section class="opleiding-section2">
+      <div class="opleiding left">
+        <div><h1>MEDIA</h1><h1>VORMGEVER</h1></div>
+      </div>
+      <div class="opleiding right">
+        <div class="square"></div>
+        <div class="opleiding-button"><span>MEER INFO</span></div>
+      </div>
+    </section>
   </div>
 </body>
 </html>
