--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       </div>
       <div class="opleiding right">
         <div class="square"></div>
-        <div class="opleiding-button"><span>MEER INFO</span></div>
+        <div class="opleiding-button"><span> <a href="opleidingen/mv.html">MEER INFO</a></span></div>
       </div>
     </section>
 
-    <section class="opleiding-section1">
+    <!-- <section class="opleiding-section1">
       <div class="opleiding left">
         <div><h1>MEDIA</h1><H1>VORMGEVER</H1></div>
       </div>
@@ -54,7 +54,7 @@
         <div class="square"></div>
         <div class="opleiding-button"><span>MEER INFO</span></div>
       </div>
-    </section>
+    </section> -->
   </div>
 </body>
 </html>
