--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="opleiding right">
         <div class="square"></div>
-        <div class="opleiding-button"><span> <a href="opleidingen/mv.html">MEER INFO</a></span></div>
+        <div class="opleiding-button"><a href="opleidingen/mv.html"><span>MEER INFO</span></a></div>
       </div>
     </section>
 
