--- a/opleidingen/mv.html
+++ b/opleidingen/mv.html
@@ -13,7 +13,7 @@
         Media <br />
         vormgeven
       </h1>
-      <a href="../../index.html"
+      <a href="../index.html"
         ><img
           class="headerLogo"
           src="../media/GLRlogo_witkader.png"
@@ -86,9 +86,9 @@
         </p>
       </section>
       <section class="onderwerp">
-        <h1>
+        <h2>
           Ontdek de Opleiding <br /><span class="mv">Mediavormgever</span>
-        </h1>
+        </h2>
         <p>
           Ben jij creatief, zit je vol ideeën en ben je gek op media? Dan is de
           mbo-opleiding Mediavormgever iets voor jou. Als mediavormgever maak en
