--- a/opleidingen/mv.html
+++ b/opleidingen/mv.html
@@ -87,7 +87,8 @@
       </section>
       <section class="onderwerp">
         <h2>
-          Ontdek de Opleiding <br /><span class="mv">Mediavormgever</span>
+          Ontdek de Opleiding <br/>
+          <span class="mv">Mediavormgever</span>
         </h2>
         <p>
           Ben jij creatief, zit je vol ideeën en ben je gek op media? Dan is de
