--- a/opleidingen/mv.html
+++ b/opleidingen/mv.html
@@ -87,16 +87,32 @@
       </section>
       <section class="onderwerp">
         <h2>
-          Ontdek de Opleiding <br/>
+          Ontdek de Opleiding <br />
           <span class="mv">Mediavormgever</span>
         </h2>
         <p>
           Ben jij creatief, zit je vol ideeën en ben je gek op media? Dan is de
-          mbo-opleiding Mediavormgever iets voor jou. Als mediavormgever maak en
-          ontwerp je allerlei media-uitingen. Denk aan een social media posts,
-          motion graphics, folders, brochures, apps, websites, signage,
+          mbo-opleiding <span class="mv">Mediavormgever</span> iets voor jou.
+          Als <span class="mv">Mediavormgever</span>
+          maak en ontwerp je allerlei media-uitingen. Denk aan een social media
+          posts, motion graphics, folders, brochures, apps, websites, signage,
           animaties en nog veel meer.
         </p>
+      </section>
+      <section class="text-foto">
+        <p>
+          <span class="mv">Mediavormgever</span>
+          is een uitdagende en afwisselende opleiding voor studenten die
+          creatief én handig met de computer zijn. Je leert hoe je verschillende
+          teken- en ontwerptechnieken toepast en je gaat aan de slag met kleur,
+          vlakverdeling, illustraties, foto’s en bewegend beeld. Ook
+          experimenteer en werk je met de nieuwste technologie in je designs,
+          zoals virtual en augmented reality.
+        </p>
+        <img
+          src="../media/GLR_communicatie_fves2022_mediavormgeven4-_lr.jpg"
+          alt=""
+        />
       </section>
     </div>
   </body>
