--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
         <a class="opleiding-button button-7" href="opleidingen/mv.html"><span>MEER INFO</span></a>
       </div>
     </section>
-    
+    <div><img class="background-img-1" src="media/Geluidssterkte Bollen 01_Groen_FC.png" alt=""></div>
+    <div><img class="background-img-2" src="media/Lijn Verdwijnpunt 01_Groen_FC.png" alt=""></div>
   </div>
 </body>
 </html>
